--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">SSUCIETY</string>
+    <string name="facebook_app_id">148903879063924</string>
+    <string name="fb_login_protocol_scheme">fb148903879063924</string>
 </resources>
