--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
-    <string name="app_name">SSUCIETY</string>
+    <string name="app_name">숭아리</string>
     <string name="facebook_app_id">148903879063924</string>
     <string name="fb_login_protocol_scheme">fb148903879063924</string>
-    <string name="title_activity_club_list">동아리 관리</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -13,4 +12,5 @@
         <item>창작</item>
         <item>학술</item>
     </string-array>
+    <string name="title_activity_club_schedule_manage">ClubScheduleManageActivity</string>
 </resources>
