--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_clubinfomation">Clubinfomation</string>
+    <string name="title_activity_manage_pic">ManagePic</string>
 </resources>
