--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string-array name="tag_array">
+        <item>전체</item>
         <item>예술</item>
         <item>체육</item>
         <item>창작</item>
